# CodeMCP

./: .codemcp  .codemcp.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  check_code.py  docker-compose.yml  mkdocs.yml  pyproject.toml  reset_admin_password.py  start.sh  test_api.py
doc/: api_specification.md  architecture_design.md  cli_api_integration_summary.md  console_cli_design.md  console_cli_implementation.md  data_model_design.md  database_models.md  documentation_and_deployment.md  jwt_authentication_design.md  jwt_authentication_implementation.md  mcp_protocol_interface.md  project_structure.md  project_summary.md  state_machine_design.md  task_window_mechanism.md  tasks_api_authentication.md  testing_strategy.md  user_guide.md
plan/: codemcp_plan_1.0.md  plan_template.md
scripts/: build_docs.sh  init_admin.py
skills/codemcp-executor/: README.md  SKILL.md  codemcp_executor.py
skills/codemcp-executor/assets/: config_template.json  result_template.json  task_template.json
skills/codemcp-executor/docs/: api_reference.md  task_format.md
skills/codemcp-executor/examples/: basic_executor.py
skills/codemcp-executor/examples/basic_task_execution/: README.md  config_example.json  result_example.json  task_example.json
skills/codemcp-executor/scripts/: check_environment.sh  codemcp_executor.sh  execute_task.sh  fetch_task.sh  run_tests.sh  submit_result.sh
skills/codemcp-planner/: CHANGELOG.md  INSTALL.md  LICENSE  PACKAGE_SUMMARY.md  README.md  SKILL.md  codemcp_planner.py  plan_templates.py  requirements_analyzer.py  start.sh
skills/codemcp-planner/assets/: plan_template_README.md
skills/codemcp-planner/docs/: workflow_diagram.md
skills/codemcp-planner/examples/: complete_workflow.py  create_blog_plan.py  project_plan_template.json
skills/codemcp-planner/scripts/: check_environment.sh  codemcp_planner.sh  create_plan_template.sh
src/codemcp/: __init__.py  __main__.py  config.py  exceptions.py
src/codemcp/api/: __init__.py  dependencies.py  middleware.py  server.py
src/codemcp/api/routes/: __init__.py  auth.py  blocks.py  events.py  features.py  queue.py  status.py  systems.py  tasks.py
src/codemcp/api/schemas/: __init__.py  auth.py  block.py  common.py  feature.py  system.py  task.py
src/codemcp/cli/: __init__.py  api_client.py  config.py  console.py  main.py
src/codemcp/cli/commands/: __init__.py  config.py  monitor.py  queue.py  server.py  status.py  system.py  task.py  user.py
src/codemcp/cli/ui/: __init__.py  layout.py  panels.py  themes.py  widgets.py
src/codemcp/core/: __init__.py  executor.py  failure_handler.py  monitor.py  planner.py  state_machine.py  task_engine.py  task_window.py
src/codemcp/database/: __init__.py  engine.py  session.py
src/codemcp/database/migrations/: __init__.py  env.py
src/codemcp/database/migrations/versions/: 3aa87677f0e5_add_system_id_to_users_table.py  40d119d5d9b7_initial_migration.py
src/codemcp/mcp/: __init__.py  executor_client.py  planner_client.py  protocol.py  server.py
src/codemcp/models/: __init__.py  base.py  block.py  feature.py  system.py  task_queue.py  test.py  user.py
src/codemcp/utils/: __init__.py  http_client.py  jwt.py  logging.py  password.py  time_utils.py  validation.py
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_queue.py  test_tasks.py
tests/test_cli/: __init__.py
tests/test_core/: __init__.py  test_executor.py  test_state_machine.py  test_task_window.py
tests/test_integration/: __init__.py  test_e2e_basic.py
tests/test_models/: __init__.py  test_block.py  test_feature.py  test_system.py  test_task_queue.py  test_test.py
